# basic-booking-wm

./: .CAPA2_STATUS  .IMPLEMENTATION_STATUS  .claudeignore  .dockerignore  .env.example  .env.example.production  .env.test.example  .eslintignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.bak  AGENTS.md.old  AGENTS_REFERENCE.md  AUDITOR.md  CLAUDE.md  Caddyfile  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile.ai-agent  FINAL_STATUS.md  GCAL_WEBHOOK_QUICKSTART.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  Makefile  QUICKSTART_MCP.md  README.md  REMEDIATION_PLAN_2026-04-11T14-56-21Z.md  REMEDIATION_SESSION_2026-04-10.md  TELEGRAM_FLOW_ISSUE.md  WINDMILL_RELOAD_STEPS.md  add_pep723_headers.py  all_go_tests.txt  analyze_mains.py  cleanup_script.py  dd.sh  debug_tests.ts  dev.n8n.stax@gmail.com.ics  (+61 more)
.ai-codex/: feature-map.md  index.md  lib.md  schema.md  summary.md
.claude/: settings.json
.gemini/: settings.json
.kilocode/: mcp.json
.windmill/: workspace.json
audits/: AUDIT_2026-04-10T09-50-00Z.md  AUDIT_2026-04-10T11-00-00Z.md  AUDIT_2026-04-10T13-40-00Z.md  AUDIT_2026-04-10T18-00-53Z.md  AUDIT_2026-04-10T21-50-49Z.md  AUDIT_2026-04-11T14-59-00Z.md  AUDIT_2026-04-11T15-05-00Z.md  AUDIT_2026-04-12T10-00-00Z.md  AUDIT_2026-04-15T15-50-00Z.md  audit_mon_compliance_2026-04-17.md
docker-compose/: .env.example  .gitignore  Dockerfile  docker-compose.yml
docker-compose.dev/: .env.example  .gitignore  docker-compose.yml
docs/: AI_AGENT_HANDBOOK.md  AI_AGENT_TEST_RESULTS.md  AI_AGENT_V2.2_IMPROVEMENTS.md  AI_AGENT_V2_IMPROVEMENTS.md  ALL_PHASES_COMPLETE.md  AUDIT_CODE_VS_DB.md  AVAILABILITY_RESPONSE_IMPROVEMENTS.md  BOOKING_COLLISION_FIX_COMPLETE.md  DIAGRAMAS.md  (+125 more)
(+1539 files in other folders)
