[project]
name = "booking-titanium-wm"
version = "0.1.0"
description = "Medical Appointment Booking System"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "email-validator>=2.1.0",
    "asyncpg>=0.29.0",
    "cryptography>=42.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
    "mcp-codebase-index>=0.7.1",
    "pre-commit>=4.6.0",
    "mcp>=1.27.0",
]
