[project]
name = "booking-titanium-wm"
version = "0.1.0"
description = "Medical Appointment Booking System"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.0",
    "email-validator>=2.2.0",
    "asyncpg>=0.30.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.1",
    "beartype>=0.19.0",
    "returns>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "mypy>=1.15.0",
    "ruff>=0.9.0",
    "mcp-codebase-index>=0.7.1",
    "pre-commit>=4.1.0",
    "mcp>=1.3.0",
]

[tool.uv]
managed = true

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "stubs"
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "wmill.*"
ignore_missing_imports = true


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "RUF", "TCH"]
ignore  = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["."]
addopts    = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "strict"
